--- a/src/main/resources/templates/fragments/modal/error-modal.html
+++ b/src/main/resources/templates/fragments/modal/error-modal.html
@@ -3,10 +3,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Модальное окно с сообщением об ошибке</title>
+        <title>Модальное окно для сообщений об ошибке</title>
     </head>
     <body>
-        <div th:fragment="modal-error" class="modal fade" id="error-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+        <div th:fragment="error-modal" class="modal fade" id="error-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-overriden-danger">
                 <div class="modal-content">
                     <div class="modal-header">
