--- a/src/main/resources/templates/fragments/modal/success-modal.html
+++ b/src/main/resources/templates/fragments/modal/success-modal.html
@@ -3,10 +3,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Модальное окно с сообщением об успехе</title>
+        <title>Модальное окно для сообщений об успехе</title>
     </head>
     <body>
-        <div th:fragment="modal-success" class="modal fade" id="success-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+        <div th:fragment="success-modal" class="modal fade" id="success-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-overriden-success">
                 <div class="modal-content">
                     <div class="modal-header">
