--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -9,7 +9,7 @@
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 text-center mx-auto">
