--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <!-- Модальное окно с вводом кода регистрации -->
+        <!-- Модальное окно для ввода кода регистрации -->
         <div class="modal fade" id="code-input-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -71,15 +71,17 @@
                         <h1 class="modal-title fs-4">Ввод кода</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-4">
-                        <div class="mb-2 mt-1" id="code-input-error">
-                            <div class="text-center fs-4 danger-block rounded h-100">
+                    <div class="modal-body fs-5">
+                        <div class="mb-2 mt-1" id="code-input-error" style="display: none">
+                            <div class="text-center fs-5 danger-block rounded h-100">
                                 <p class="mb-1 my-auto">Неверный код</p>
                             </div>
                         </div>
                         <form action="#" th:action="@{/rest/security-codes/check}" method="post" id="code-input-form" class="mb-2">
-                            <label for="code" class="form-label text-center">Введите код регистрации</label>
-                            <input type="text" name="code" class="form-control mb-3" placeholder="dkjf-dsfj37-127sj-12s72j-1sju" />
+                            <div class="mb-3">
+                                <label for="code" class="form-label">Введите код регистрации</label>
+                                <input type="text" name="code" id="code" class="form-control" placeholder="dkjf-dsfj37-127sj-12s72j-1sju" />
+                            </div>
                             <button type="submit" class="btn btn-primary">Отправить</button>
                         </form>
                     </div>
@@ -91,6 +93,6 @@
         </div>
         <!-- Скрипты -->
         <script src="../static/js/main.js" th:src="@{/js/main.js}"></script>
-        <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+        <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
     </body>
 </html>
