--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -26,19 +26,19 @@
                             <h3 class="fs-4 mb-1 m-1">OID: <span th:text="${each.oid}">1.232.345.7665.123.5</span></h3>
                             <div th:switch="${each.currentState}">
                                 <p th:case="'WAITING_CODE'" class="fs-5 mb-1 m-1">
-                                    <a href="#" th:href="@{/hospitals/__${each.id}__/request}" class="stretched-link text-decoration-none text-warning">
+                                    <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="stretched-link text-decoration-none text-danger">
                                         Дата подачи заявки:
                                         <span th:text="${each.request.date}">25-12-2019 19:11:43</span>
                                     </a>
                                 </p>
                                 <p th:case="'WAITING_REGISTRATION'" class="fs-5 mb-1 m-1">
-                                    <a href="#" th:href="@{/hospitals/__${each.id}__/request}" class="stretched-link text-decoration-none text-warning">
+                                    <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="stretched-link text-decoration-none text-warning">
                                         Дата подачи заявки:
                                         <span th:text="${each.request.date}">25-12-2019 19:11:43</span>
                                     </a>
                                 </p>
                                 <p th:case="'REGISTERED'" class="text-success fs-5 mb-1 m-1">
-                                    <a href="#" th:href="@{/hospitals/__${each.id}__}" class="stretched-link text-decoration-none text-success">
+                                    <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="stretched-link text-decoration-none text-success">
                                         Дата регистрации:
                                         <span th:text="${each.date}">25-12-2019 19:11:43 </span>
                                     </a>
