--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -16,7 +16,7 @@
                     <div class="border rounded p-2">
                         <div class="text-center mb-2 m-1">
                             <h2 class="fs-4 mb-2" th:text="${each.name}">Национальный медицинский исследовательский центр имени В. А. Алмазова</h2>
-                            <div th:switch="${each.currentState}">
+                            <div th:switch="${#strings.toString(each.currentState)}">
                                 <p th:case="'WAITING_CODE'" class="text-danger fs-5">Ожидает выдачу кода</p>
                                 <p th:case="'WAITING_REGISTRATION'" class="text-warning fs-5">Ожидает регистрации администратора</p>
                                 <p th:case="'REGISTERED'" class="text-success fs-5">Зарегистрировано</p>
@@ -24,21 +24,21 @@
                         </div>
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-md-between">
                             <h3 class="fs-4 mb-1 m-1">OID: <span th:text="${each.oid}">1.232.345.7665.123.5</span></h3>
-                            <div th:switch="${each.currentState}">
+                            <div th:switch="${#strings.toString(each.currentState)}">
                                 <p th:case="'WAITING_CODE'" class="fs-5 mb-1 m-1">
-                                    <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="stretched-link text-decoration-none text-danger">
+                                    <a href="#" th:href="@{/hospital-registration/requests/__${each.request.id}__}" class="stretched-link text-decoration-none text-danger">
                                         Дата подачи заявки:
                                         <span th:text="${each.request.date}">25-12-2019 19:11:43</span>
                                     </a>
                                 </p>
                                 <p th:case="'WAITING_REGISTRATION'" class="fs-5 mb-1 m-1">
-                                    <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="stretched-link text-decoration-none text-warning">
+                                    <a href="#" th:href="@{/hospital-registration/requests/__${each.request.id}__}" class="stretched-link text-decoration-none text-warning">
                                         Дата подачи заявки:
                                         <span th:text="${each.request.date}">25-12-2019 19:11:43</span>
                                     </a>
                                 </p>
                                 <p th:case="'REGISTERED'" class="text-success fs-5 mb-1 m-1">
-                                    <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="stretched-link text-decoration-none text-success">
+                                    <a href="#" th:href="@{/hospital-registration/requests/__${each.request.id}__}" class="stretched-link text-decoration-none text-success">
                                         Дата регистрации:
                                         <span th:text="${each.date}">25-12-2019 19:11:43 </span>
                                     </a>
