--- a/src/main/resources/templates/hospitals/hospital-registration-request.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-request.html
@@ -33,8 +33,8 @@
                         <p class="fs-5 word-wrap">
                             <span th:text="${request.lastname}">Иванов</span>
                             <span th:text="${request.name}">Иван</span>
-                            <span th:text="${request.patronymic}">Иванович</span>
-                            <span th:text="', ' + ${post}" class="text-lowercase fw-bold">Главврач</span>
+                            <span th:text="${request.patronymic} + ', '">Иванович</span>
+                            <span th:text="${request.post}" class="text-lowercase fw-bold">Главврач</span>
                         </p>
                     </div>
                     <hr />
@@ -62,7 +62,7 @@
             </div>
             <!-- Кнопки (принять/отклонить) или текстовая информация в зависимости от текущего состояния медицинского учреждения -->
             <div class="row">
-                <div class="col-12 text-center" th:switch="${request.hospital.currentState}">
+                <div class="col-12 text-center" th:switch="${#strings.toString(request.hospital.currentState)}">
                     <div th:case="'WAITING_CODE'" class="d-flex flex-row flex-wrap align-items-center justify-content-center">
                         <button class="btn btn-lg btn-success m-2" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
                         <button class="btn btn-lg btn-danger m-2" id="decline-request">Отклонить</button>
@@ -76,7 +76,7 @@
             </div>
         </div>
         <!-- Модальное окно для генерации кода -->
-        <div th:if="${request.hospital.currentState} == 'WAITING_CODE'" class="modal fade" id="code-generation-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+        <div th:if="${#strings.toString(request.hospital.currentState)} == 'WAITING_CODE'" class="modal fade" id="code-generation-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -96,7 +96,7 @@
                             <div class="mb-3">
                                 <label for="role" class="form-label">Роль</label>
                                 <select name="role" id="role" class="form-select" disabled>
-                                    <option th:text="${role}">Администратор</option>
+                                    <option th:text="${role.alias}">Администратор</option>
                                 </select>
                             </div>
                             <div class="mb-3">
@@ -109,7 +109,7 @@
                                     <option th:each="each : ${expirationDateList}" th:text="${each.alias}" th:value="${each}">1 день</option>
                                 </select>
                             </div>
-                            <button type="submit" class="btn btn-primary mb-1">Сгенерировать код</button>
+                            <button type="submit" class="btn btn-primary mb-2">Сгенерировать код</button>
                         </form>
                     </div>
                     <div class="modal-footer">
