Начал в черновом варианте реализовывать скрипты для генерации кодов и отклонению заявок. Временно добавил аннотации JsonIgnore для полей кодов, больниц и заявок чтобы избежать зацикливания в json-ответах.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -65,7 +65,7 @@
         </div>
         <!-- Модальное окно для сообщений об ошибке -->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <!-- Модальное окно с сообщением об успехе -->
+        <!-- Модальное окно для сообщений об успехе -->
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
         <!-- Скрипты -->
         <script src="../../static/js/hospitals/hospital-registration-form.js" th:src="@{/js/hospitals/hospital-registration-form.js}"></script>
