--- a/src/main/resources/templates/fragments/footers/footer.html
+++ b/src/main/resources/templates/fragments/footers/footer.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="m-2 m-md-0">
                         <a href="#" th:href="@{/}">
-                            <img src="../../../static/img/main.png" th:src="@{/static/img/main.png}" alt="Главная" width="64" />
+                            <img src="../../../static/img/main.png" th:src="@{/img/main.png}" alt="Главная" width="64" />
                         </a>
                     </div>
                 </div>
