Поправил стиль страницы входа, добавил новый стиль (для цвета текста) в файл стилей.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,6 +6,10 @@
     background-color: var(--bs-gray-200);
 }
 
+.text-gray-300 {
+    color: var(--bs-gray-300);
+}
+
 .break-all {
     word-wrap: break-word;
     word-break: break-all;
