--- a/src/main/resources/templates/fragments/headers/anon-header.html
+++ b/src/main/resources/templates/fragments/headers/anon-header.html
@@ -9,12 +9,12 @@
         <header class="container-fluid bg-dark" th:fragment="anon-header">
             <div class="container p-2">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between">
-                    <div class="m-2 m-sm-0">
+                    <div class="m-2 my-sm-0">
                         <a href="#" th:href="@{/}">
                             <img src="../../../static/img/main.png" th:src="@{/img/main.png}" alt="Главная" width="56" />
                         </a>
                     </div>
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between m-2 m-sm-0">
+                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between m-2 my-sm-0">
                         <a href="/login" th:href="@{/login}" class="btn btn-primary m-2">Войти</a>
                         <button type="button" class="btn btn-warning m-2" data-bs-toggle="modal" data-bs-target="#code-input-modal">Зарегистрироваться</button>
                         <a href="/hospital-registration/form" th:href="@{/hospital-registration/form}" class="btn btn-success m-2">Подать заявку</a>
